--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 		<title> a very promising start for linza </title>
 	</head>
 	<body>
-<style>
+<style> <!-- a little comment to make sure the commit works xd -->
 #p1
 	{ color:purple;
 	  text-align: left;
