--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
 	<head>
-		<title> a very promising start for linza </title>
+		<title> Chibi's Butt </title>
 	</head>
 	<body>
 <style> <!-- a little comment to make sure the commit works xd -->
@@ -13,20 +13,28 @@
 
 body
 	{
-	background-color:rgb(100,200,220);
+	background-color:rgb(216,145,239);
 	}
 
 #header1
-	{ color:rgb(200,0,200);
+	{ color:rgb(100,0,150);
 	  text-align: center;
-	  font-size: 100px;
-	  background-color: rgb(100,50,50);
+	  font-size: 45px;
+	  background-color:yellow;
+	  border-radius: 200px;
+	  display: block;
+	  font-family: cursive;
+	  width:300px;
 	}
 </style>
+
 		<h1 id="header1"> Chibi's Art gallery </h1>
 		<p id="p1"> 
-		this is the start of the website of someone really skilled at digital art 
-		<br> oh and also my beloved wifey <3
+		Lilac is pretty 
+		<br> where the art at doe
 		</p>
+		<img src="https://i.imgur.com/aQUmFyW.jpg" >
+		<p> oh there it is! </p>
+		
 	</body>
 </html>
