--- a/hello.html
+++ b/hello.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
 <html> 
 	<head>
-		<title> Chibi's Butt </title>
+		<title> Chibi's Dump </title>
 	</head>
 	<body>
-<style> <!-- a little comment to make sure the commit works xd -->
-#p1
-	{ color:purple;
-	  text-align: left;
-	  font-size: 60px;
-	}
 
-body
-	{
-	background-color:rgb(216,145,239);
-	}
 
-#header1
-	{ color:rgb(100,0,150);
-	  text-align: center;
-	  font-size: 45px;
-	  background-color:yellow;
-	  border-radius: 200px;
-	  display: block;
-	  font-family: cursive;
-	  width:300px;
-	}
-</style>
+<nav class="menu-bar">
+  <div class="group">
+    <a class="item title">Chibi's Dump</a>
+  </div>
+  <div class="group">
+    <a href="#artR" class="item">Realistic Art</a>
+    <a href="#artW" class="item">Weeb Stuffs</a>
+  </div>
+</nav>
+	
+	<link rel="stylesheet" href="style.css">
 
-		<h1 id="header1"> Chibi's Art gallery </h1>
+		<h1 class="center" id="header1"> Chibi's Art gallery </h1>
 		<p id="p1"> 
-		Lilac is pretty 
-		<br> where the art at doe
+		Linza is a strong female woman who has a passion for digital art and anime. <br>
+		What could go wrong? <br>
+		For starters, lots and lots of fanart for pretty much any hot guy that shows up in anime, but hey...if you like the style she can probably draw your favourite characters too! (real or fictional we don't judge.
+		<br> where the art at doe?
 		</p>
-		<img src="https://i.imgur.com/aQUmFyW.jpg" >
-		<p> oh there it is! </p>
+		<img id="artW" class="centerimage" src="https://i.imgur.com/aQUmFyW.jpg" >
+		<p class="center"> oh there it is! </p>
 		
 	</body>
 </html>
