Realistic stuff done

--- a/RealisticArt.html
+++ b/RealisticArt.html
@@ -3,6 +3,20 @@
     <title>Realistic Styles!</title>
 </head>
 <body>
+<!--Styles you need this-->
+<link rel="stylesheet" href="style.css">
+
+<!--Top Bar-->
+<nav class="menu-bar">
+    <div class="group">
+      <a href="main.html" class="item title">Chibi's Dump</a>
+    </div>
+    <div class="group">
+      <a href="RealisticArt.html" class="item">Realistic Art</a>
+      <a href="Weebstuff.html" class="item">Weeb Stuffs</a>
+    </div>
+  </nav>
+
 <p class="generictext">
 These examples show the amount of time put into detail. <br>
 Do bare in mind these require a really good reference for it to turn out as detailed as possible.
@@ -11,6 +25,61 @@ Do bare in mind these require a really good reference for it to turn out as deta
 <h1 class="headers">
 Samples
 </h1>
+
+<div class="row">
+    <div class="column">
+        <img src="https://i.imgur.com/eiBODKS.jpeg" alt="Reki x Langa Art">
+        <img src="https://i.imgur.com/UoKhkCe.jpeg" alt="Trio of popular animes">
+        <img src="https://i.imgur.com/orZTfhS.jpeg" alt="Vampire man" >
+
+
+    </div>
+
+    <div class="column">
+        <img src="https://i.imgur.com/Hs7Oe5E.jpeg" alt="crown man">
+        <img src="https://i.imgur.com/Hs7Oe5E.jpeg" alt="harry potter wannabe">
+        <img src="https://i.imgur.com/BGbOQoz.jpeg" alt="handsome man">
+    </div>
+    <div class="column">
+        <img src="https://i.imgur.com/BGbOQoz.jpeg" alt="arcade man">
+        <img src="https://i.imgur.com/BGbOQoz.jpeg" alt="oil 1st try">
+        <img src="https://i.imgur.com/JAveoO5.jpeg" alt="blinded by feathers"
+
+    </div>
+
+    <div class="column">
+    <img src="https://i.imgur.com/teDveIr.jpeg" alt="deku lookin ass">
+    <img src="https://i.imgur.com/oAxy2oG.jpeg" alt="Todorki lookin ass">
+    <img src="https://i.imgur.com/9YXF5o4.jpeg" alt="haku lookin ass">    
+    </div>
+    <div class="column">
+        <img src="https://i.imgur.com/SUIkk2I.jpeg" alt="house oil">
+        <img src="https://i.imgur.com/MjDgf36.jpeg" alt="eid scam lol"
+        <img src="https://i.imgur.com/FH9DMSa.jpeg" alt="malfoy lookin ass"
+    </div>
+    <div class="column">
+        <img src="https://i.imgur.com/ESAc3IK.jpeg" alt="Neji">
+        <img src="https://i.imgur.com/5OJgHjH.jpeg">
+        <img src="https://i.imgur.com/jaWPaMl.jpeg" alt="hidan irl"
+
+    </div>
+    <div class="column">
+        <img src="https://i.imgur.com/N8n3Pls.jpeg" alt="gold">
+        <img src="https://i.imgur.com/jpBU8pd.png" alt="casual dud">
+        <img src="https://i.imgur.com/ZQTBAxA.png" alt="lucifer">
+
+    </div>
+
+    <div>
+        <img src="https://i.imgur.com/AKPtYpd.png" alt="couple grayscale messy">
+        <img src="https://i.imgur.com/5xIeU2Q.png" alt="angel man">
+    </div>
+</div>
+<p class="generictext">
+    I swear she doesn't just draw asians its just she likes bts.<br>
+    She'll draw normal people if you ask her and no its the same price dw :D.
+    
+</p>
 </body>
 
 
