--- a/Weebstuff.html
+++ b/Weebstuff.html
@@ -10,7 +10,7 @@
           <a href="main.html" class="item title">Chibi's Dump</a>
         </div>
         <div class="group">
-          <a href="RealStuff.html" class="item">Realistic Art</a>
+          <a href="RealisticArt.html" class="item">Realistic Art</a>
           <a href="#top" class="item">Weeb Stuffs</a>
         </div>
       </nav>
