--- a/main.html
+++ b/main.html
@@ -5,17 +5,17 @@
 	</head>
 	<body>
 
-
+<!--Top Bar-->
 <nav class="menu-bar">
   <div class="group">
     <a class="item title">Chibi's Dump</a>
   </div>
   <div class="group">
-    <a href="" class="item">Realistic Art</a>
+    <a href="RealisticArt.html" class="item">Realistic Art</a>
     <a href="Weebstuff.html" class="item">Weeb Stuffs</a>
   </div>
 </nav>
-	
+	<!--Styles you need this-->
 	<link rel="stylesheet" href="style.css">
 
 		<h1 class="center" id="header1"> Chibi's Art gallery </h1>
