new css! almost done with realart page

--- a/RealisticArt.html
+++ b/RealisticArt.html
@@ -37,30 +37,32 @@ Samples
 
     <div class="column">
         <img src="https://i.imgur.com/Hs7Oe5E.jpeg" alt="crown man">
-        <img src="https://i.imgur.com/Hs7Oe5E.jpeg" alt="harry potter wannabe">
+        <img src="https://i.imgur.com/g7hudoO.jpeg" alt="harry potter wannabe">
         <img src="https://i.imgur.com/BGbOQoz.jpeg" alt="handsome man">
     </div>
     <div class="column">
-        <img src="https://i.imgur.com/BGbOQoz.jpeg" alt="arcade man">
-        <img src="https://i.imgur.com/BGbOQoz.jpeg" alt="oil 1st try">
-        <img src="https://i.imgur.com/JAveoO5.jpeg" alt="blinded by feathers"
+        <img src="https://i.imgur.com/BAuldUi.jpeg" alt="arcade man">
+        <img src="https://i.imgur.com/otuAsLe.jpeg" alt="oil 1st try">
+        <img src="https://i.imgur.com/JAveoO5.jpeg" alt="blinded by feathers">
 
     </div>
 
     <div class="column">
+
     <img src="https://i.imgur.com/teDveIr.jpeg" alt="deku lookin ass">
     <img src="https://i.imgur.com/oAxy2oG.jpeg" alt="Todorki lookin ass">
     <img src="https://i.imgur.com/9YXF5o4.jpeg" alt="haku lookin ass">    
     </div>
+
     <div class="column">
         <img src="https://i.imgur.com/SUIkk2I.jpeg" alt="house oil">
-        <img src="https://i.imgur.com/MjDgf36.jpeg" alt="eid scam lol"
-        <img src="https://i.imgur.com/FH9DMSa.jpeg" alt="malfoy lookin ass"
+        <img src="https://i.imgur.com/MjDgf36.jpeg" alt="eid scam lol">
+        <img src="https://i.imgur.com/FH9DMSa.jpeg" alt="malfoy lookin ass">
     </div>
     <div class="column">
         <img src="https://i.imgur.com/ESAc3IK.jpeg" alt="Neji">
         <img src="https://i.imgur.com/5OJgHjH.jpeg">
-        <img src="https://i.imgur.com/jaWPaMl.jpeg" alt="hidan irl"
+        <img src="https://i.imgur.com/jaWPaMl.jpeg" alt="hidan irl">
 
     </div>
     <div class="column">
@@ -78,7 +80,7 @@ Samples
 <p class="generictext">
     I swear she doesn't just draw asians its just she likes bts.<br>
     She'll draw normal people if you ask her and no its the same price dw :D.
-    
+
 </p>
 </body>
 
