--- a/RealisticArt.html
+++ b/RealisticArt.html
@@ -18,8 +18,8 @@
         </nav>
 
             <p class="generictext">
-        These examples show the amount of time put into detail. <br>
-        Do bare in mind these require a really good reference for it to turn out as detailed as possible.
+   These examples show the amount of time put into detail. <br> <!-- get fucked mark-->
+   Do bare in mind these require a really good reference for it to turn out as detailed as possible.
 
             </p>
             <h1 class="center"> Samples </h1>
